--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,4 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/linux,macos,pycharm,windows,eclipse,intellij,intellij+all
 .DS_Store
+.icloud
