--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,47 @@
+beautifulsoup4==4.9.1
+cachetools==4.1.0
 certifi==2020.4.5.2
 chardet==3.0.4
 Click==7.0
 colorama==0.4.3
 elasticsearch==7.7.1
+google==2.0.3
+google-api-core==1.20.1
+google-auth==1.17.2
+google-cloud==0.34.0
+google-cloud-language==1.3.0
+googleapis-common-protos==1.52.0
+grpcio==1.29.0
 idna==2.9
 joblib==0.15.1
+kafka-python==2.0.1
+kazoo==2.5.0
 neo4j==1.7.6
 neobolt==1.7.17
 neotime==1.7.4
 nltk==3.5
 oauthlib==3.1.0
 prompt-toolkit==2.0.10
+protobuf==3.12.2
 psutil==5.7.0
 py2neo==4.3.0
 py4j==0.10.7
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycorenlp==0.3.0
 Pygments==2.3.1
+pymongo==3.10.1
 PySocks==1.7.1
-pyspark==2.4.6
+pyspark==2.2.3
 pytz==2020.1
 regex==2020.6.8
 requests==2.23.0
 requests-oauthlib==1.3.0
+rsa==4.6
 setuptools-scm==4.1.2
 six==1.15.0
+soupsieve==2.0.1
+tabulate==0.8.7
 textblob==0.15.3
 tqdm==4.46.1
 tweepy==3.8.0
